# imagefront

./: .env.template  AGENTS.md  CLAUDE.md  INSTALLATION.md  README.md  TEST_INSTALLATION.md  UI_ONLY_ITERATIONS.md  imagefront_cli.py  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude/: QUICK_REFERENCE.md  SETUP_SUMMARY.md  delegation-guide.md  settings.local.json
prompts/: annotate-ui.md  create-component-manifest.md  generate-ui.md
schemas/: annotation.schema.json  approval.schema.json  assertion.schema.json  component-manifest.schema.json  contract.schema.json  trace.schema.json
scripts/: generate-ui-image.py
templates/: approval-template.json  config.template.json  contracts-template.md  scenario-metadata.json  screen-metadata.json
