[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imagefront-cli"
version = "1.0.0"
description = "UI-First Development Framework - CLI tool for bootstrapping projects"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Imagefront Contributors"}
]
keywords = ["ui-first", "spec-driven", "ai", "development", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "https://github.com/seu-usuario/imagefront"
Documentation = "https://github.com/seu-usuario/imagefront#readme"
Repository = "https://github.com/seu-usuario/imagefront.git"
Issues = "https://github.com/seu-usuario/imagefront/issues"

[project.scripts]
imagefront = "imagefront_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "imagefront_cli.py",
    "schemas/*.json",
    "templates/*",
    "prompts/*.md",
]
